methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:17: error: not enough arguments for method FaireMotif: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  FaireMotif()
            ^MethodsPicture:4: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime7.MethodsPicture'
override def run() {
             ^